fix for fdo#48200.diff import regrex state for filter

Change-Id: If05b53602a8d8ea260093b3f6a9c0fca45cb74b9
Signed-off-by: Petr Mladek <pmladek@suse.cz>